; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_repos_diff.c_get_empty_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_repos_diff.c_get_empty_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edit_baton = type { i8*, i32 }

@svn_io_file_del_on_pool_cleanup = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.edit_baton*, i8**)* @get_empty_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_empty_file(%struct.edit_baton* %0, i8** %1) #0 {
  %3 = alloca %struct.edit_baton*, align 8
  %4 = alloca i8**, align 8
  store %struct.edit_baton* %0, %struct.edit_baton** %3, align 8
  store i8** %1, i8*** %4, align 8
  %5 = load %struct.edit_baton*, %struct.edit_baton** %3, align 8
  %6 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %21, label %9

9:                                                ; preds = %2
  %10 = load %struct.edit_baton*, %struct.edit_baton** %3, align 8
  %11 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %10, i32 0, i32 0
  %12 = load i32, i32* @svn_io_file_del_on_pool_cleanup, align 4
  %13 = load %struct.edit_baton*, %struct.edit_baton** %3, align 8
  %14 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.edit_baton*, %struct.edit_baton** %3, align 8
  %17 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @svn_io_open_unique_file3(i32* null, i8** %11, i32* null, i32 %12, i32 %15, i32 %18)
  %20 = call i32 @SVN_ERR(i32 %19)
  br label %21

21:                                               ; preds = %9, %2
  %22 = load %struct.edit_baton*, %struct.edit_baton** %3, align 8
  %23 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  %25 = load i8**, i8*** %4, align 8
  store i8* %24, i8** %25, align 8
  %26 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %26
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_io_open_unique_file3(i32*, i8**, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
